@@ -3,7 +3,7 @@
 # This demonstration script creates a toplevel window that displays
 # all of Tk's built-in bitmaps.
 #
-# RCS: @(#) $Id: bitmap.tcl,v 1.3 2003/08/20 23:02:18 hobbs Exp $
+# RCS: @(#) $Id: bitmap.tcl,v 1.4 2003/11/03 15:31:18 dkf Exp $
 
 if {![info exists widgetDemo]} {
     error "This script should be run from the \"widget\" demo."
@@ -33,7 +33,6 @@ proc bitmapRow {w args} {
 }
 
 set w .bitmap
-global tk_library
 catch {destroy $w}
 toplevel $w
 wm title $w "Bitmap Demonstration"
